syntax = "proto3";

package face_verification;

service FaceVerification {
  rpc EnrollFace(EnrollRequest) returns (EnrollResponse);
  rpc VerifyFace(VerifyRequest) returns (VerifyResponse);
  rpc VerifyFaceMultiFrame(VerifyMultiFrameRequest) returns (VerifyResponse);
  rpc GetUserProfiles(GetProfilesRequest) returns (GetProfilesResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);
}

message EnrollRequest {
  string user_id = 1;
  string company_id = 2;
  bytes image_data = 3;  // JPEG/PNG bytes
  optional string device_id = 4;
  bool make_primary = 5;
  map<string, string> metadata = 6;
}

message DuplicateProfile {
  string user_id = 1;
  float similarity = 2;
}

message EnrollResponse {
  string status = 1; // ok, duplicate, failed
  optional string profile_id = 2;
  optional string message = 3;
  repeated DuplicateProfile duplicate_profiles = 4;
  optional float quality_score = 5;
  // Added embedding so we can persist to face_profiles table (vector(512))
  repeated float embedding = 6; // length should be 512
  optional string embedding_version = 7;
}

message VerifyRequest {
  bytes image_data = 1;
  string company_id = 2;
  optional string user_id = 3; // for 1:1
  optional string device_id = 4;
  string search_mode = 5; // "1:1" or "1:N"
  int32 top_k = 6;
}

message VerifyMultiFrameRequest {
  repeated bytes frames = 1; // 3-5 frames
  string company_id = 2;
  optional string user_id = 3;
  optional string device_id = 4;
  string search_mode = 5;
  int32 top_k = 6;
}

message Match {
  string user_id = 1;
  string profile_id = 2;
  float similarity = 3;
  float confidence = 4;
  bool is_primary = 5;
}

message VerifyResponse {
  string status = 1; // match, no_match, failed
  bool verified = 2;
  repeated Match matches = 3;
  optional Match best_match = 4;
  optional string message = 5;
  optional float liveness_score = 6;
}

message GetProfilesRequest {
  string user_id = 1;
  string company_id = 2;
}

message FaceProfile {
  string profile_id = 1;
  string user_id = 2;
  string company_id = 3;
  string embedding_version = 4;
  bool is_primary = 5;
  string created_at = 6;
  string updated_at = 7;
  optional string deleted_at = 8;
  map<string, string> metadata = 9;
  optional float quality_score = 10;
  // Added embedding to allow syncing with DB
  repeated float embedding = 11; // length 512
}

message GetProfilesResponse {
  repeated FaceProfile profiles = 1;
}

message UpdateProfileRequest {
  string profile_id = 1;
  string company_id = 2;
  optional bytes image_data = 3;
  optional bool make_primary = 4;
  map<string, string> metadata = 5;
}

message UpdateProfileResponse {
  string status = 1;
  string message = 2;
}

message DeleteProfileRequest {
  string profile_id = 1;
  string company_id = 2;
  bool hard_delete = 3;
}

message DeleteProfileResponse {
  string status = 1;
  string message = 2;
}
